k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  namespace: final-project
spec:
  type: ClusterIP
  selector:
    app: python-app
  ports:
    - port: 80
      targetPort: 8800
